@@ -29,6 +29,7 @@
 		in the order you wish it to appear, replacing "MY SLIDE"
 		with the filename of your slide.
 		<div><a href="MY SLIDE" class="load"></a></div> -->
+		<div><a href="testing.html" class="load"></a></div>
 		<div><a href="welcome.html" class="load"></a></div>
 		<div><a href="gbrainy.html" class="load"></a></div>
 		<div><a href="nanny.html" class="load"></a></div>
@@ -48,10 +49,12 @@
 	</div>
 </div>
 
-<div id="debug-controls">
-<input type="button" id="prev-slide" value="&lt;"/>
-<input type="button" id="next-slide" value="&gt;"/>
+<div id="controls">
+<a class="control-arrow" id="prev-slide"></a>
+<a class="control-arrow" id="next-slide"></a>
+<input type="hidden" id="current-slide" />
 </div>
+
 
 </body>
 
