@@ -1,8 +1,12 @@
 ubiquity-slideshow-ubuntu (30) UNRELEASED; urgency=low
 
+  [ Dylan McCall ]
   * Improve kerning in Ubuntu slideshow (LP: #688512)
 
- -- Dylan McCall <dylan@dylan-laptop>  Mon, 13 Dec 2010 09:39:15 -0800
+  [ Jonathan Carter ]
+  * Update Edubuntu slides
+
+ -- Jonathan Carter <jonathan@ubuntu.com>  Tue, 21 Dec 2010 10:22:45 -0500
 
 ubiquity-slideshow-ubuntu (29) natty; urgency=low
 
